# logorithm

./: CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/: SECURITY.md
.github/workflows/: cmake.yml  sonar.yml
examples/: example.cpp
include/logorithm/: Logger.h
src/: Logger.cpp
tests/: CMakeLists.txt  LoggerTests.cpp  LoggerTests.h
